done for the day

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <section class="show-search">
-        <input type="text" name="search" id="search">
+        <input type="text" name="search" class="search">
         <button class="search-btn"><img src="img/search_FILL0_wght400_GRAD0_opsz48.png" alt=""></button>
     </section>
 
