--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="nav-bar">
         <ul class="list">
             <li class="list-iteam"><a href="#home">Home</a></li>
-            <li class="list-iteam"><a href="#search">Shows</a></li>
+            <li class="list-iteam"><a href="#show-search">Shows</a></li>
             <li class="list-iteam"><a href="">Articles</a></li>
         </ul>
     </nav>
